--- a/SampleApplications/Samples/ClientXamarin/Opc.Ua.SampleClientXamarin/Opc.Ua.SampleClientXamarin/project.json
+++ b/SampleApplications/Samples/ClientXamarin/Opc.Ua.SampleClientXamarin/Opc.Ua.SampleClientXamarin/project.json
@@ -2,10 +2,12 @@
   "supports": {},
   "dependencies": {
     "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.0",
+    "Xamarin.Forms": "2.3.3.168"
   },
   "frameworks": {
     "netstandard1.4": {
+      "imports": "portable-win+net45+wp8+win81+wpa8"
     }
   }
 }
